--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
 
   flutter_masked_text: ^0.8.0
 
+  intl:
+  intl_translation:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
