--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_masked_text: ^0.8.0
   sqflite: ^1.1.0
   path_provider:
+  datetime_picker_formfield: ^0.1.8
 
   intl:
   intl_translation:
